--- a/src/ONIModLauncher/ModListControl.xaml
+++ b/src/ONIModLauncher/ModListControl.xaml
@@ -41,14 +41,15 @@
 
                 <Grid Grid.Row="1" Background="{StaticResource LightBrush}">
                     <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="32"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
 
-                    <Label Grid.Column="0" Margin="10,0,0,0" Width="46" VerticalAlignment="Center" FontSize="14">Base</Label>
-                    <Label Grid.Column="1" Margin="5,0,0,0" Width="46" VerticalAlignment="Center" FontSize="14">DLC</Label>
-                    <Label Grid.Column="2" Margin="10,0,0,0" VerticalAlignment="Center" FontSize="14">Title</Label>
+                    <Label Grid.Column="1" Margin="10,0,0,0" Width="46" VerticalAlignment="Center" FontSize="14">Base</Label>
+                    <Label Grid.Column="2" Margin="5,0,0,0" Width="46" VerticalAlignment="Center" FontSize="14">DLC</Label>
+                    <Label Grid.Column="3" Margin="10,0,0,0" VerticalAlignment="Center" FontSize="14">Title</Label>
                 </Grid>
 
                 <ListView x:Name="modsList" Grid.Row="2" BorderThickness="0" Padding="0,1,0,0" HorizontalContentAlignment="Stretch"
