--- a/src/ONIModLauncher/LauncherSidebarControl.xaml
+++ b/src/ONIModLauncher/LauncherSidebarControl.xaml
@@ -5,9 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ONIModLauncher"
              mc:Ignorable="d" 
-             d:DesignHeight="800" d:DesignWidth="300">
+             d:DesignHeight="800" d:DesignWidth="300"
+             Loaded="LauncherSidebarControl_OnLoaded">
     <StackPanel>
-        <Button x:Name="launchButton" Margin="0,0,0,10" Height="82"
+        <Button x:Name="launchButton" Height="82"
                 Style="{StaticResource PinkButton}" FontSize="40"
                 IsEnabled="{Binding Path=CanLaunch}"
                 Click="launchButton_Click">
@@ -17,37 +18,60 @@
                 <Image Width="50"/>
             </StackPanel>
         </Button>
-        <CheckBox x:Name="baseGameCheckbox" Padding="20,5,0,5"
-                  IsEnabled="False"
-                  IsChecked="{Binding Path=HasBaseGame, Mode=OneWay}">
-            <Border BorderThickness="1" BorderBrush="Black">
-                <Image Source="/Assets/vanilla.jpg" Height="50"/>
-            </Border>
-        </CheckBox>
-        <CheckBox x:Name="dlc1Checkbox" Padding="20,5,0,5"
-                  IsEnabled="{Binding Path=CanToggleDLC1}"
-                  IsChecked="{Binding Path=PlayerPrefs.DLC1Enabled}">
-            <Border BorderThickness="1" BorderBrush="Black">
-                <Image Source="/Assets/dlc1.jpg" Height="50"/>
-            </Border>
-        </CheckBox>
-        <CheckBox x:Name="debugModeCheckbox" Padding="20,5,0,5" Height="62"
+        <CheckBox x:Name="debugModeCheckbox" Margin="5,0,0,0" Padding="10,5,0,5" Height="62"
                   IsEnabled="{Binding Path=IsNotRunning}"
                   IsChecked="{Binding Path=DebugPrefs.EnableDebug}">Debug Mode</CheckBox>
-        <Grid>
-            <CheckBox x:Name="loadLastSaveCheckbox" Padding="20,5,0,5" Height="62"
-                      IsEnabled="{Binding Path=IsNotRunning}"
-                              IsChecked="{Binding Path=DebugPrefs.AutoResumeLastSave}">Load Last Save</CheckBox>
-            <Button x:Name="pickSaveButton" HorizontalAlignment="Right" VerticalAlignment="Center" Padding="10"
-                    IsEnabled="{Binding Path=CanEditLastSave}"
-                    Style="{StaticResource BlueButton}" FontSize="10"
-                    Click="pickSaveButton_Click">Select Save</Button>
-        </Grid>
+        <GroupBox Header="Enabled Content">
+            <StackPanel>
+                <CheckBox x:Name="baseGameCheckbox" Padding="10,5,0,5"
+                          IsEnabled="False"
+                          IsChecked="{Binding Path=HasBaseGame, Mode=OneWay}">
+                    <Border BorderThickness="1" BorderBrush="Black">
+                        <Image Source="/Assets/vanilla.jpg" Height="60"
+                               RenderOptions.BitmapScalingMode="HighQuality"/>
+                    </Border>
+                </CheckBox>
+                <CheckBox x:Name="dlc1Checkbox" Padding="10,5,0,5"
+                          IsEnabled="{Binding Path=CanToggleDLC1}"
+                          IsChecked="{Binding Path=PlayerPrefs.DLC1Enabled}">
+                    <Border BorderThickness="1" BorderBrush="Black">
+                        <Image Source="/Assets/dlc1.jpg" Height="60"
+                               RenderOptions.BitmapScalingMode="HighQuality"/>
+                    </Border>
+                </CheckBox>
+                <CheckBox x:Name="dlc2Checkbox" Padding="10,5,0,5"
+                          IsEnabled="False"
+                          IsChecked="{Binding Path=HasDLC2, Mode=OneWay}">
+                    <Border BorderThickness="1" BorderBrush="Black">
+                        <Image Source="/Assets/dlc2.jpg" Height="60"
+                               RenderOptions.BitmapScalingMode="HighQuality"/>
+                    </Border>
+                </CheckBox>
+            </StackPanel>
+        </GroupBox>
+        <GroupBox Header="Save Management">
+            <StackPanel>
+                <Button x:Name="pickSaveButton" VerticalAlignment="Center" Margin="0,5,0,0" Padding="10"
+                        Style="{StaticResource PinkButton}"
+                        Click="pickSaveButton_Click">Change Current Save File</Button>
+                <CheckBox x:Name="loadLastSaveCheckbox" Padding="10,5,0,5" Height="62"
+                          IsEnabled="{Binding Path=IsNotRunning}"
+                          IsChecked="{Binding Path=DebugPrefs.AutoResumeLastSave}">Skip Main Menu</CheckBox>
+                    
+            </StackPanel>
+        </GroupBox>
+        
+        
+        
         <Button x:Name="modFolderButton" Margin="0,10,0,0" Height="50"
                 Style="{StaticResource BlueButton}" FontSize="20"
                 Click="modFolderButton_Click">&#x1F4C1; Open Mods Folder</Button>
         <Button x:Name="gameLogButton" Margin="0,10,0,0" Height="50"
                 Style="{StaticResource BlueButton}" FontSize="20"
                 Click="gameLogButton_Click">&#x1F4C3; Open Game Log</Button>
+        <Button x:Name="modBrowserButton" Margin="0,10,0,0" Height="50"
+                Style="{StaticResource BlueButton}" FontSize="20"
+                Visibility="Collapsed"
+                Click="ModBrowserButton_OnClick">&#x2692; Browse Workshop</Button>
     </StackPanel>
 </UserControl>
