--- a/src/ONIModLauncher/ModListControl.xaml
+++ b/src/ONIModLauncher/ModListControl.xaml
@@ -7,7 +7,8 @@
              xmlns:dd="urn:gong-wpf-dragdrop"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             Loaded="UserControl_Loaded">
+             Loaded="UserControl_Loaded"
+             FontSize="14">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -15,14 +16,9 @@
         </Grid.RowDefinitions>
 
         <Border Grid.Row="0" BorderBrush="Black" BorderThickness="1">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="30"/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
+            <DockPanel Background="{StaticResource DarkBrush}">
 
-                <Grid Grid.Row="0" Background="{StaticResource PinkBrush}">
+                <Grid DockPanel.Dock="Top" Background="{StaticResource PinkBrush}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition Width="Auto"/>
@@ -40,21 +36,63 @@
                                         Click="refreshModsButton_Click">Refresh</Button>
                 </Grid>
 
-                <Grid Grid.Row="1" Background="{StaticResource LightBrush}">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="32"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
+                <Grid DockPanel.Dock="Top" Background="{StaticResource LightBrush}">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="30"/>
+                    </Grid.RowDefinitions>
 
-                    <Label Grid.Column="1" Margin="10,0,0,0" Width="46" VerticalAlignment="Center" FontSize="14">Base</Label>
-                    <Label Grid.Column="2" Margin="5,0,0,0" Width="46" VerticalAlignment="Center" FontSize="14">DLC</Label>
-                    <Label Grid.Column="3" Margin="10,0,0,0" VerticalAlignment="Center" FontSize="14">Title</Label>
+                    <Grid Grid.Row="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock Grid.Column="0" Margin="5,0,10,0" VerticalAlignment="Center"
+                                   FontSize="16" Foreground="Black"
+                                   Text="Search:"/>
+
+                        <TextBox x:Name="searchBox" Grid.Column="1" Margin="3" Padding="3" BorderThickness="1" BorderBrush="Black"
+                                 FontSize="16"
+                                 TextChanged="SearchBox_OnTextChanged"/>
+
+                        <TextBlock Grid.Column="2" Margin="10,0,10,0" VerticalAlignment="Center"
+                                   FontSize="16" Foreground="Black"
+                                   Text="Folder:"/>
+
+                        <ComboBox x:Name="modTypeComboBox" Grid.Column="3" Width="80" Margin="3" VerticalContentAlignment="Center"
+                                  SelectedIndex="0"
+                                  SelectionChanged="ModTypeComboBox_OnSelectionChanged">
+                            <ComboBoxItem>All</ComboBoxItem>
+                            <ComboBoxItem>Dev</ComboBoxItem>
+                            <ComboBoxItem>Local</ComboBoxItem>
+                            <ComboBoxItem>Steam</ComboBoxItem>
+                        </ComboBox>
+
+                        
+
+                        
+                    </Grid>
+
+                    <Grid Grid.Row="1" Height="30">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="32"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+
+                        <Label Grid.Column="1" Margin="10,0,0,0" Width="46" VerticalAlignment="Center" FontSize="14">Base</Label>
+                        <Label Grid.Column="2" Margin="5,0,0,0" Width="46" VerticalAlignment="Center" FontSize="14">DLC</Label>
+                        <Label Grid.Column="3" Margin="10,0,0,0" VerticalAlignment="Center" FontSize="14">Title</Label>
+                    </Grid>
                 </Grid>
 
-                <ListView x:Name="modsList" Grid.Row="2" BorderThickness="0" Padding="0,1,0,0" HorizontalContentAlignment="Stretch"
-                          ItemsSource="{Binding Mods}"
+                
+
+                <ListView x:Name="modsList" BorderThickness="0" Padding="0,1,0,0" HorizontalContentAlignment="Stretch"
                           Background="{StaticResource DarkBrush}" ScrollViewer.CanContentScroll="False"
                           dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True">
                     <ListView.Resources>
@@ -80,56 +118,94 @@
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="Auto"/>
                                         <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="Auto"/>
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
 
-                                    <Image Source="/Assets/dragger.png" Width="32"
-                                           ToolTip="Drag to reorder"/>
+                                    <StackPanel Grid.Column="0" Orientation="Horizontal">
 
-                                    <CheckBox Grid.Column="1" Margin="5"
-                                              IsEnabled="{Binding Path=SupportsVanilla, Mode=OneWay}"
-                                              IsChecked="{Binding Path=EnabledVanilla, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                              ToolTip="Enable for Vanilla"/>
-                                    <CheckBox Grid.Column="2" Margin="5"
-                                              IsEnabled="{Binding Path=SupportsDLC1, Mode=OneWay}"
-                                              IsChecked="{Binding Path=EnabledDLC1, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                              ToolTip="Enable for Spaced Out!"/>
-                                    <Label Grid.Column="3" Margin="10,0,0,0" FontFamily="{StaticResource ONIFont}" FontSize="18" TextOptions.TextFormattingMode="Display" Foreground="White" VerticalAlignment="Center" Content="{Binding Path=Title}"/>
-                                    <Label Grid.Column="4" Foreground="White" VerticalAlignment="Center" Visibility="{Binding Path=IsLocal, Mode=OneWay, Converter={StaticResource BoolToVis}}">(local)</Label>
-                                    <Label Grid.Column="4" Foreground="White" VerticalAlignment="Center" Visibility="{Binding Path=IsDev, Mode=OneWay, Converter={StaticResource BoolToVis}}">(dev)</Label>
-                                    <Button Grid.Column="5" Margin="5,0" Height="38"
-                                            Style="{StaticResource PinkButton}" FontSize="16" Width="80"
-                                            Visibility="{Binding Path=HasConfig, Mode=OneWay, Converter={StaticResource BoolToVis}}"
-                                            ToolTip="Open config file"
-                                            Command="{Binding Path=OpenConfigCommand}">Config</Button>
-                                    <Button Grid.Column="6" Margin="5,0" Height="38"
-                                            Style="{StaticResource ImageButton}"
-                                            Visibility="{Binding Path=IsSteam, Mode=OneWay, Converter={StaticResource BoolToVis}}"
-                                            ToolTip="Open Workshop page"
-                                            Command="{Binding Path=OpenWorkshopCommand}">
-                                        <Image Source="/Assets/workshop_banner.png" Height="36"/>
-                                    </Button>
-                                    <Button Grid.Column="7" FontSize="16" Margin="5,0" Width="38" Height="38"
-                                            Style="{StaticResource BlueButton}"
-                                            ToolTip="Open mod folder"
-                                            Command="{Binding Path=OpenFolderCommand}">&#x1F4C1;</Button>
+                                        <Image Source="/Assets/dragger.png" Width="32"
+                                               ToolTip="Drag to reorder"/>
+
+                                        <TextBox Width="48" Height="36" Margin="5"
+                                                 Visibility="Collapsed"
+                                                 HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                                                 FontSize="16"
+                                                 Text="{Binding LoadOrderIndex}"/>
+
+                                        <CheckBox Margin="5"
+                                                  Visibility="{Binding Source={x:Static local:Launcher.Instance}, Path=PlayerPrefs.DLC1Enabled, Converter={StaticResource InvBoolToVis}, FallbackValue=Collapsed}"
+                                                  IsEnabled="{Binding SupportsVanilla, Mode=OneWay}"
+                                                  IsChecked="{Binding EnabledVanilla, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                  ToolTip="Enable for Vanilla"/>
+
+                                        <CheckBox Margin="5"
+                                                  Visibility="{Binding Source={x:Static local:Launcher.Instance}, Path=PlayerPrefs.DLC1Enabled, Converter={StaticResource BoolToVis}, FallbackValue=Collapsed}"
+                                                  IsEnabled="{Binding SupportsDLC1, Mode=OneWay}"
+                                                  IsChecked="{Binding EnabledDLC1, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                  ToolTip="Enable for Spaced Out!"/>
+
+                                        <Label Margin="10,0,0,0" FontFamily="{StaticResource ONIFont}" FontSize="18" TextOptions.TextFormattingMode="Display" Foreground="White" VerticalAlignment="Center" Content="{Binding Path=Title}"/>
+                                        <Label Foreground="White" VerticalAlignment="Center" Visibility="{Binding IsLocal, Mode=OneWay, Converter={StaticResource BoolToVis}}">(local)</Label>
+                                        <Label Foreground="White" VerticalAlignment="Center" Visibility="{Binding IsDev, Mode=OneWay, Converter={StaticResource BoolToVis}}">(dev)</Label>
+
+                                    </StackPanel>
+
+                                    <StackPanel Grid.Column="2" Orientation="Horizontal">
+                                        <Button Margin="5,0" Height="38"
+                                                Style="{StaticResource PinkButton}" FontSize="16" Width="80"
+                                                Visibility="{Binding HasConfig, Mode=OneWay, Converter={StaticResource BoolToVis}}"
+                                                ToolTip="Open config file"
+                                                Command="{Binding OpenConfigCommand}">Config</Button>
+                                        <Button Margin="5,0" Height="38"
+                                                Style="{StaticResource ImageButton}"
+                                                Visibility="{Binding IsSteam, Mode=OneWay, Converter={StaticResource BoolToVis}}"
+                                                ToolTip="Open Workshop page"
+                                                Command="{Binding OpenWorkshopCommand}">
+                                            <Image Source="/Assets/workshop_icon.png" Height="36"
+                                                   RenderOptions.BitmapScalingMode="HighQuality"/>
+                                        </Button>
+                                        <Button Margin="5,0" Height="38"
+                                                Style="{StaticResource ImageButton}"
+                                                BorderThickness="0"
+                                                Visibility="{Binding RepoIsGithub, Mode=OneWay, Converter={StaticResource BoolToVis}}"
+                                                ToolTip="Open Github Repo"
+                                                Command="{Binding OpenRepoCommand}">
+                                            <Image Source="/Assets/github-mark-white.png" Height="36"
+                                                   RenderOptions.BitmapScalingMode="HighQuality"/>
+                                        </Button>
+                                        <Button FontSize="16" Margin="5,0" Width="38" Height="38"
+                                                Style="{StaticResource BlueButton}"
+                                                ToolTip="Open mod folder"
+                                                Command="{Binding OpenFolderCommand}">&#x1F4C1;</Button>
+                                    </StackPanel>
                                 </Grid>
+                                <Border.ContextMenu>
+                                    <ContextMenu>
+                                        <MenuItem Header="Move to Top" Click="MoveToTopMenuItem_OnClick"/>
+                                        <MenuItem Header="Move to Bottom" Click="MoveToBottomMenuItem_OnClick"/>
+                                    </ContextMenu>
+                                </Border.ContextMenu>
                             </Border>
                             <DataTemplate.Triggers>
+                                <DataTrigger Binding="{Binding IsDev}" Value="True">
+                                    <Setter TargetName="border" Property="Background" Value="{StaticResource YellowBrush}"/>
+                                </DataTrigger>
                                 <Trigger Property="IsMouseOver" Value="True">
                                     <Setter TargetName="border" Property="Background" Value="{StaticResource LightBlueBrush}"/>
                                 </Trigger>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding IsDev}" Value="True"/>
+                                        <Condition Binding="{Binding ElementName=border, Path=IsMouseOver}" Value="True"/>
+                                    </MultiDataTrigger.Conditions>
+                                    <Setter TargetName="border" Property="Background" Value="{StaticResource LightYellowBrush}"/>
+                                </MultiDataTrigger>
                             </DataTemplate.Triggers>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-            </Grid>
+            </DockPanel>
         </Border>
         <StackPanel Grid.Row="1" Orientation="Horizontal">
             <Button x:Name="selectAllModsButton" Margin="0,10,0,0" Width="100" Height="30" FontSize="16" Style="{StaticResource BlueButton}"
@@ -142,7 +218,7 @@
                     Click="sortModsButton_Click">Sort Mods</Button>
         </StackPanel>
 
-        <Border x:Name="modListLockScreen" Grid.RowSpan="2" Background="Black" Opacity="0.9">
+        <Border x:Name="modListLockScreen" Visibility="Collapsed" Grid.RowSpan="2" Background="Black" Opacity="0.9">
             <Label HorizontalAlignment="Center" VerticalAlignment="Center"
                    Foreground="White"
                    FontSize="20" FontFamily="{StaticResource ONIFont}">Mod list cannot be changed while the game is running.</Label>
