--- a/src/ONIModLauncher/Theme.xaml
+++ b/src/ONIModLauncher/Theme.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
     <FontFamily x:Key="ONIFont">/Assets/GRAYSTROKE REGULAR.otf#GRAYSTROKE</FontFamily>
     <FontFamily x:Key="DroidSansFont">/Assets/DroidSans.tff#Droid Sans</FontFamily>
-    
+
     <Color x:Key="DarkColor" R="23" G="23" B="29" A="255"/>
     <Color x:Key="MediumColor" R="56" G="56" B="56" A="255"/>
     <Color x:Key="LightColor" R="176" G="176" B="176" A="255"/>
@@ -13,6 +13,8 @@
     <Color x:Key="HoverBlueColor" R="88" G="95" B="124" A="255"/>
     <Color x:Key="PinkColor" R="127" G="61" B="94" A="255"/>
     <Color x:Key="LightPinkColor" R="158" G="85" B="121" A="255"/>
+    <Color x:Key="YellowColor" R="141" G="109" B="32" A="255"/>
+    <Color x:Key="LightYellowColor" R="218" G="169" B="50" A="255"/>
 
     <SolidColorBrush x:Key="DarkBrush" Color="{StaticResource DarkColor}"/>
     <SolidColorBrush x:Key="MediumBrush" Color="{StaticResource MediumColor}"/>
@@ -23,6 +25,8 @@
     <SolidColorBrush x:Key="HoverBlueBrush" Color="{StaticResource HoverBlueColor}"/>
     <SolidColorBrush x:Key="PinkBrush" Color="{StaticResource PinkColor}"/>
     <SolidColorBrush x:Key="LightPinkBrush" Color="{StaticResource LightPinkColor}"/>
+    <SolidColorBrush x:Key="YellowBrush" Color="{StaticResource YellowColor}"/>
+    <SolidColorBrush x:Key="LightYellowBrush" Color="{StaticResource LightYellowColor}"/>
 
     <Style x:Key="PinkButton" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="{StaticResource PinkBrush}"/>
@@ -77,17 +81,18 @@
     </Style>
 
     <Style x:Key="ImageButton" TargetType="{x:Type Button}">
-        <Setter Property="Background" Value="Black"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="White"/>
+        <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border x:Name="Border" Background="{TemplateBinding Background}" BorderThickness="1" BorderBrush="Black">
+                    <Border x:Name="Border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="Black">
                         <Grid>
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                             <Border x:Name="Highlight" Background="White" Opacity="0"/>
                         </Grid>
-                        
+
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -108,7 +113,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <SolidColorBrush x:Key="OptionMark.Static.Glyph" Color="#FF212121"/>
     <SolidColorBrush x:Key="OptionMark.MouseOver.Background" Color="#FFF3F9FF"/>
     <SolidColorBrush x:Key="OptionMark.MouseOver.Border" Color="#FF5593FF"/>
@@ -119,6 +124,34 @@
     <SolidColorBrush x:Key="OptionMark.Disabled.Background" Color="#FFE6E6E6"/>
     <SolidColorBrush x:Key="OptionMark.Disabled.Border" Color="#FFBCBCBC"/>
     <SolidColorBrush x:Key="OptionMark.Disabled.Glyph" Color="#FF707070"/>
+
+    <Style TargetType="GroupBox">
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="GroupBox">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+
+                        <ContentPresenter Grid.Row="0" Margin="0,5,0,0" ContentSource="Header" RecognizesAccessKey="True" />
+
+                        <Border Grid.Row="1" BorderThickness="0,1,0,0" BorderBrush="Black">
+                            <Border.Background>
+                                <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                                    <GradientStop Color="{DynamicResource ContentAreaColorLight}" Offset="0" />
+                                    <GradientStop Color="{DynamicResource ContentAreaColorDark}" Offset="1" />
+                                </LinearGradientBrush>
+                            </Border.Background>
+                            <ContentPresenter Margin="5" />
+                        </Border>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
     <Style TargetType="{x:Type CheckBox}">
         <Setter Property="Foreground" Value="White"/>
@@ -199,7 +232,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <Style x:Key="ScrollBarPageButton" TargetType="{x:Type RepeatButton}">
         <Setter Property="Visibility" Value="Hidden"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -214,7 +247,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="OverridesDefaultStyle" Value="true"/>
@@ -252,7 +285,7 @@
             <RepeatButton Grid.Row="3" Style="{StaticResource ScrollBarLineButton}" Height="18" Command="ScrollBar.LineDownCommand" Content="M 0 0 L 4 4 L 8 0 Z"/>
         </Grid>
     </ControlTemplate>
-    
+
     <ControlTemplate x:Key="HorizontalScrollBar" TargetType="{x:Type ScrollBar}">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -276,7 +309,7 @@
             <RepeatButton Grid.Column="3" Style="{StaticResource ScrollBarLineButton}" Width="18" Command="ScrollBar.LineRightCommand" Content="M 0 0 L 4 4 L 0 8 Z"/>
         </Grid>
     </ControlTemplate>
-    
+
     <Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="OverridesDefaultStyle" Value="true"/>
