--- a/src/ONIModLauncher/Theme.xaml
+++ b/src/ONIModLauncher/Theme.xaml
@@ -15,6 +15,8 @@
     <Color x:Key="LightPinkColor" R="158" G="85" B="121" A="255"/>
     <Color x:Key="YellowColor" R="141" G="109" B="32" A="255"/>
     <Color x:Key="LightYellowColor" R="218" G="169" B="50" A="255"/>
+    <Color x:Key="OrangeColor" R="211" G="137" B="78" A="255"/>
+    <Color x:Key="LightOrangeColor" R="251" G="179" B="59" A="255"/>
 
     <SolidColorBrush x:Key="DarkBrush" Color="{StaticResource DarkColor}"/>
     <SolidColorBrush x:Key="MediumBrush" Color="{StaticResource MediumColor}"/>
@@ -27,6 +29,8 @@
     <SolidColorBrush x:Key="LightPinkBrush" Color="{StaticResource LightPinkColor}"/>
     <SolidColorBrush x:Key="YellowBrush" Color="{StaticResource YellowColor}"/>
     <SolidColorBrush x:Key="LightYellowBrush" Color="{StaticResource LightYellowColor}"/>
+    <SolidColorBrush x:Key="OrangeBrush" Color="{StaticResource OrangeColor}"/>
+    <SolidColorBrush x:Key="LightOrangeBrush" Color="{StaticResource LightOrangeColor}"/>
 
     <Style x:Key="PinkButton" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="{StaticResource PinkBrush}"/>
@@ -70,6 +74,32 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Background" Value="{StaticResource LightBlueBrush}" TargetName="Border" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Background" Value="Gray" TargetName="Border"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="OrangeButton" TargetType="{x:Type Button}">
+        <Setter Property="Background" Value="{StaticResource OrangeBrush}"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontFamily" Value="{StaticResource ONIFont}"/>
+        <Setter Property="Padding" Value="5"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="Border" Background="{TemplateBinding Background}" BorderThickness="1" BorderBrush="Black">
+                        <Grid Margin="{TemplateBinding Padding}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{StaticResource LightOrangeBrush}" TargetName="Border" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Background" Value="Gray" TargetName="Border"/>
